k8s-files/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-container
spec:
  selector:
    app: mysql-container
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer   
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
